TAG: vega_ensemblseqload-4-3-3-5
TAG: vega_ensemblseqload-4-3-3-4
DATE: 03/08/2010
STAFF: sc
CHANGES:
1) Install - loop thru config files using DLAINSTALL -x option
2) fixed INPUTDIR added 'input'

TAG: vega_ensemblseqload-4-3-3-3
DATE: 03/05/2010
STAFF: sc
CHANGES:
1) Updated some input/output file names and paths
2) Overall comment update

TAG: vega_ensemblseqload-4-3-3-2
DATE: 01/24/2010
STAFF: sc
CHANGES:
1) provider.config files added CONFIG_SEQASSOC to
   run seqseqassocload
2) INFILE_SEQASSOCLOAD - updated filename
3) vega_ensemblseqload.sh - added call to seqseqassocload

TAG: vega_ensemblseqload-4-3-3-1
TAG: vega_ensemblseqload-4-3-1-10
DATE: 01/22/2010
STAFF: sc
CHANGES:
1) all config files, disambiguated marker association and 
   sequence association
2) added createSeqAssocInputFile.py
3) vega_ensemblseqload.sh - added commented out call to 
	createSeqAssocInputFile.py

TAG: vega_ensemblseqload-4-3-1-9
DATE: 01/22/2010
STAFF: sc
CHANGES:
1) Update curation logging, updated specific config files
  with proper RELEASE_NO

TAG: vega_ensemblseqload-4-3-1-8
DATE: 01/20/2010
STAFF: sc
CHANGES: 
1) *seqload.config - updated to use /data/downloads symlinks
2) vega_seqload.config - updated filename as they changed at vega

TAG: vega_ensemblseqload-4-3-1-7
DATE: 12/14/2009
STAFF: sc
CHANGES: ensembl seq config files: corrected SEQ_RELEASE_NUM to v56

TAG: vega_ensemblseqload-4-3-1-6
DATE: 12/08/2009
STAFF: sc
CHANGES: I realized that the associatins were only getting redone
  when reloading sequences, thus the following changes:
1) vega_ensemblseqload.sh - added processing of second parameter
   a boolean indicating to load sequences and assocs when true, 
   only assocs when false
2) VegaEnsemblSeqloadCfg - added boolean getLoadSeqs()
3) VegaEnsemblSeqloader - added checking for boolean and processing 
   accordingly.
TAG: vega_ensemblseqload-4-3-1-5
TAG: vega_ensemblseqload-4-3-1-4
TAG: vega_ensemblseqload-4-3-1-3
TAG: vega_ensemblseqload-4-3-1-2